[build-system]
requires = ["hatchling", "packaging", "ziglang==0.16.0"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-zscene"
description = "Scene change detection for Vapoursynth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["vapoursynth>=74"]
dynamic = ["version"]

# Development dependencies to assist with script development and linting
[dependency-groups]
dev = ["hatchling", "packaging", "ziglang==0.16.0", "ruff", "mypy"]

[tool.hatch.version]
source = "regex"
path = "build.zig.zon"
pattern = '\.version\s*=\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "build.zig",
    "build.zig.zon",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/zscene"]
artifacts = [
    "vapoursynth/plugins/zscene/*.dylib",
    "vapoursynth/plugins/zscene/*.so",
    "vapoursynth/plugins/zscene/*.dll",
    "vapoursynth/plugins/zscene/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
